Ajout d'un commentaire dans le fichier portfolioSYLVAIN.html

--- a/portfolioSYLVAIN.html
+++ b/portfolioSYLVAIN.html
@@ -1,3 +1,7 @@
+<!--Il ne faut pas se servir de ce fichier car il n'est pas le fichier index.html>
+
+
+
 <!DOCTYPE html>
 <html lang="en-US" class="no-js">
 	<head>
